<resources>
    <string name="app_name">Cemil</string>
    <string name="find_nearby_restaurants_from_your_location">Find nearby restaurants from your location</string>
    <string name="next">Next</string>
    <string name="get_your_best_food_recommendations">Get your best food recommendations</string>
    <string name="get_started">Get Started</string>
    <string name="obtain_latest_reviews_from_the_customers">Obtain latest reviews from the customers</string>
    <string name="illustration">Illustration</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="create_account">Create Account</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="congratulations_your_account_is_created_successfully">Congratulations!\nYour account is created successfully</string>
    <string name="continue_registersuccess">Continue</string>
    <string name="forgot_your_password">Forgot your Password?</string>
    <string name="enter_your_email_below_so_we_can">Enter your email below so we can send further instructions to reset your password.</string>
    <string name="enter_your_email_here">Enter your email here</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="history">History</string>
    <string name="foods_restaurants_users_reviews_etc">Foods, restaurants, users, reviews, etc</string>
    <string name="current_location">Current Location</string>
    <string name="your_location">Your Location</string>
    <string name="find_me_food">Find Me Food!</string>
    <string name="frequently_visited">Frequently Visited</string>
    <string name="popular_restos">Popular Restos</string>
    <string name="home_banner">Home Banner</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="x_km_x_ratings">x km x ratings</string>
    <string name="nearby_restos">Nearby Restos</string>
    <string name="account">Account</string>
    <string name="my_reviews">My Reviews</string>
    <string name="recommendations">Recommendations</string>
    <string name="appearance">Appearance</string>
    <string name="language">Language</string>
    <string name="about_cemil">About Cemil</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="enter_your_new_name_here">Enter your new name here</string>
    <string name="enter_your_phone_number_here">Enter your phone number here</string>
    <string name="save">Save</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="enter_your_current_password_here">Enter your current password here</string>
    <string name="enter_the_new_password_you_want_here">Enter the new password you want here</string>
    <string name="confirm_your_new_password_here">Confirm your new password here</string>
    <string name="clear_fields">Clear Fields</string>
    <string name="are_you_sure_to_logout">Are you sure to logout?</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="system_default">System Default</string>
    <string name="recommendations_history">Recommendations History</string>
    <string name="join_us_to_explore_more_features_available">Join us to explore more features available</string>
    <string name="already_have_account">Already have account?</string>
    <string name="back">Back</string>
    <string name="login_account">Login Account</string>
    <string name="click_here">Click here</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="or">or</string>
    <string name="cemil_s_terms_and_conditions">Cemil\'s terms and conditions</string>
    <string name="i_agree_to">I agree to</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="_13_may_2022">13 May 2022</string>
    <string name="restaurant">Restaurant</string>
    <string name="restaurant_rating">Restaurant Rating</string>
    <string name="sort_by_location">Sort by Location</string>
    <string name="sort_by_ratings">Sort by Ratings</string>
    <string name="recent_searches">Recent searches</string>
    <string name="categories">Categories</string>
    <string name="clear_all">Clear all</string>
    <string name="pick_location">Pick Location</string>
    <string name="retrieve_your_current_location_search_a_location_or_choose_from_maps">Retrieve your current location, search a location, or choose from Maps.</string>
    <string name="choose_current_location">Choose Current Location</string>
    <string name="google_maps_api_key" translatable="false">AIzaSyDqe3NXc9qiFf82huuP3JgbJmlQDJd_Z1Y</string>
    <string name="reviews">Reviews</string>
    <string name="read_more">Read more</string>
    <string name="_0_0">0.0</string>
    <string name="restaurant_location">Restaurant Location</string>
    <string name="restaurant_open_hours">Restaurant Open Hours</string>
    <string name="restaurant_average_cost">Restaurant Average Cost</string>
    <string name="phone_number">Phone Number</string>
    <string name="preferences">Preferences</string>
    <string name="average_price">Average Price</string>
    <string name="open_days">Open Days</string>
    <string name="distance">Distance</string>
    <string name="rating">Rating</string>
    <string name="add_review">Add Review</string>
    <string name="see_all_reviews">See All Reviews</string>

    <string-array name="setting_names">
        <item>History</item>
        <item>My Reviews</item>
        <item>Recommendations</item>
        <item>Change Password</item>
        <item>Appearance</item>
        <item>Language</item>
        <item>About Cemil</item>
        <item>Logout</item>
    </string-array>

    <integer-array name="setting_icons">
        <item>@drawable/ic_history_filled</item>
        <item>@drawable/ic_review_filled</item>
        <item>@drawable/ic_recommendation_filled</item>
        <item>@drawable/ic_change_password_filled</item>
        <item>@drawable/ic_appearance_filled</item>
        <item>@drawable/ic_language_filled</item>
        <item>@drawable/ic_about_filled</item>
        <item>@drawable/ic_logout_filled</item>
    </integer-array>

    <string-array name="category_titles">
        <item>Bakery and Cake</item>
        <item>Beef</item>
        <item>Burger</item>
        <item>Chicken</item>
        <item>Chinese</item>
        <item>Coffee</item>
        <item>Duck</item>
        <item>Ice Cream</item>
        <item>Indonesian</item>
        <item>Japanese</item>
        <item>Korean</item>
        <item>Noodles</item>
        <item>Pasta</item>
        <item>Pizza</item>
        <item>Pork</item>
        <item>Rice</item>
        <item>Seafood</item>
        <item>Snacks</item>
        <item>Tea</item>
        <item>Thai</item>
        <item>Western</item>
    </string-array>

    <integer-array name="category_photos">
        <item>@drawable/bakery_and_cake</item>
        <item>@drawable/beef</item>
        <item>@drawable/burger</item>
        <item>@drawable/chicken</item>
        <item>@drawable/chinese</item>
        <item>@drawable/coffee</item>
        <item>@drawable/duck</item>
        <item>@drawable/ice_cream</item>
        <item>@drawable/indonesian</item>
        <item>@drawable/japanese</item>
        <item>@drawable/korean</item>
        <item>@drawable/noodles</item>
        <item>@drawable/pasta</item>
        <item>@drawable/pizza</item>
        <item>@drawable/pork</item>
        <item>@drawable/rice</item>
        <item>@drawable/seafood</item>
        <item>@drawable/snacks</item>
        <item>@drawable/tea</item>
        <item>@drawable/thai</item>
        <item>@drawable/western</item>
    </integer-array>

    <string-array name="average_price">
        <item>Rp.10.000</item>
        <item>Rp.25.000</item>
        <item>Rp.50.000</item>
        <item>Rp.100.000+</item>
    </string-array>

    <string-array name="open_days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string-array name="distance">
        <item>0–5 km</item>
        <item>5–10 km</item>
        <item>10+ km</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="how_would_you_rate_this_restaurant">How would you rate this restaurant?</string>
    <string name="write_your_review_here">Write your review here</string>
    <string name="cancel">Cancel</string>
    <string name="find_me_restaurant">Find me Restaurant</string>
    <string name="restaurant_logo">Restaurant Logo</string>
    <string name="price">Price</string>
    <string name="likes">Likes</string>
    <string name="recently_visited">Recently Visited</string>
    <string name="decline">Decline</string>
    <string name="cemil_choose_your_meal">Cemil: Choose Your Meal</string>
    <string name="version_pre_release">Version: PRE_RELEASE</string>

</resources>