<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.ChangePasswordFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbarChangePassword"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@drawable/curved_toolbar"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/toolbarNavUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_back_filled"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="?colorOnPrimary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/change_password"
            android:textColor="?colorOnPrimary"
            android:textSize="20sp" />

    </com.google.android.material.appbar.MaterialToolbar>

    <TextView
        android:id="@+id/tvCurrentPasswordLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/nunito_medium"
        android:text="@string/current_password"
        android:textColor="?colorOnBackground"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/etCurrentPassword"
        app:layout_constraintStart_toStartOf="@+id/etCurrentPassword"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbarChangePassword" />

    <EditText
        android:id="@+id/etCurrentPassword"
        style="@style/Theme.Cemil.EditText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/nunito_regular"
        android:hint="@string/enter_your_current_password_here"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:autofillHints="name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCurrentPasswordLabel" />

    <TextView
        android:id="@+id/tvNewPasswordLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/nunito_medium"
        android:text="@string/new_password"
        android:textColor="?colorOnBackground"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/etNewPassword"
        app:layout_constraintStart_toStartOf="@+id/etNewPassword"
        app:layout_constraintTop_toBottomOf="@+id/etCurrentPassword" />

    <EditText
        android:id="@+id/etNewPassword"
        style="@style/Theme.Cemil.EditText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/nunito_regular"
        android:hint="@string/enter_the_new_password_you_want_here"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:autofillHints="emailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNewPasswordLabel" />

    <TextView
        android:id="@+id/tvConfirmPasswordLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/nunito_medium"
        android:text="@string/confirm_password"
        android:textColor="?colorOnBackground"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/etConfirmPassword"
        app:layout_constraintStart_toStartOf="@+id/etConfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/etNewPassword" />

    <EditText
        android:id="@+id/etConfirmPassword"
        style="@style/Theme.Cemil.EditText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="phone"
        android:fontFamily="@font/nunito_regular"
        android:hint="@string/confirm_your_new_password_here"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvConfirmPasswordLabel" />

    <Button
        android:id="@+id/btnChangePassword"
        style="@style/Widget.Material3.Button"
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/nunito_bold"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/change_password"
        android:textAlignment="center"
        android:textColor="?android:colorBackground"
        android:textSize="20sp"
        app:cornerRadius="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etConfirmPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnClearFields"
        style="@style/Widget.Material3.Button"
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/background"
        android:fontFamily="@font/nunito_bold"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/clear_fields"
        android:textAlignment="center"
        android:textColor="@color/primary"
        android:textSize="20sp"
        app:cornerRadius="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnChangePassword"
        app:strokeColor="@color/primary"
        app:strokeWidth="1dp" />

</androidx.constraintlayout.widget.ConstraintLayout>