<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".authentication.ForgotPasswordFragment">

    <TextView
        android:id="@+id/tvForgotYourPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/nunito_extrabold"
        android:text="@string/forgot_your_password"
        android:textColor="@color/primary"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tvEnterYourEmailBelow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tvEnterYourEmailBelow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/nunito_regular"
        android:text="@string/enter_your_email_below_so_we_can"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/tvForgotEmailLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotYourPassword" />

    <TextView
        android:id="@+id/tvForgotEmailLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nunito_medium"
        android:text="@string/email"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/etForgotEmail"
        app:layout_constraintStart_toStartOf="@+id/etForgotEmail"
        app:layout_constraintTop_toBottomOf="@+id/tvEnterYourEmailBelow" />

    <EditText
        android:id="@+id/etForgotEmail"
        style="@style/Theme.Cemil.EditText"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/enter_your_email_here"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/btnResetMyPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotEmailLabel" />

    <Button
        android:id="@+id/btnResetMyPassword"
        style="@style/Widget.Material3.Button"
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/nunito_extrabold"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:cornerRadius="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etForgotEmail" />
</androidx.constraintlayout.widget.ConstraintLayout>